#2 Fix blog listing page on mobile.

--- a/_includes/css/mobile.blogs.css
+++ b/_includes/css/mobile.blogs.css
@@ -7,7 +7,7 @@
 		margin-top: 2em;
 	}
 
-	.project-image {
+	.blog-image {
 		margin-bottom: 1.0em;
 	}
 
